2004-06-07  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_run.c (bk_run_signal): Shut up Insure.

	* lib/b_realloc.c (bk_malloc_wrap_destroy): DOH! Use while() not
	for() when destroying clc's.

	* lib/b_general.c (bk_general_init): Initialize malloc wrapper if
	__INSURE__ 
	(bk_general_destroy): Destroy malloc wrapper if __INSURE__ 

2004-05-28  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_string.c (bk_string_csv_quote): Escape NEWLINES with the
	correct sequence. Put NUL in correct spot (if there's space).

	* lib/b_pollio.c (bk_polling_io_read): Null out event handler
	after dequeue.

2004-05-27  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_string.c (bk_string_csv_quote): Function to quote string
	for BAKA csv processing.

2004-05-19  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringbuf.c (bk_ring_read): Name a variable deadbeef and use
	its address instead of 0xdeadbeef so that Insure will shut the
	hell up.

2004-05-18  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_strconv.c (bk_string_xmlsafe): #963: don't print control chars

2004-05-06  Seth Robertson  <seth@sysdetect.com>

	* src/bk_daemon.c: Fix bk_daemon bug James introduced

2004-05-04  Brian Larkins  <brian@sysdetect.com>

	* lib/Makefile, lib/b_dll.c, include/libbk_inline.h:

	fun defs in headers?
	only for inline functions
	but this one's too big.

	* test/test_ringdir.c:
	proto change broke this
	add a null pointer or two
	maybe missed commit?

	* include/libbk.h:
	casting lvalues?
	not in gcc 3.3!
	modify statements

2004-04-29  James Tanis  <jtt@sysdetect.com>

	* include/libbk.h: time_t is a long not an unsigned long

2004-04-29  Seth Robertson  <seth@sysdetect.com>

	* src/bk_funi.c: Handle -U gid initialization

2004-04-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_netutils.c, lib/b_string.c: stale commit

2004-04-27  James Tanis  <jtt@sysdetect.com>

	* include/libbk.h: Connection expire code.

2004-04-26  James Tanis  <jtt@buscemi.sysdetect.com>
