@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_vptr.c,v 1.2 2003/12/06 01:22:02 dupuy Exp $";
+static const char libbk__rcsid[] = "$Id: b_vptr.c,v 1.3 2004/06/08 21:43:07 jtt Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2003";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -36,7 +36,7 @@ static const char libbk__contact[] = "<projectbaka@baka.org>";
  *	@return <i>-1</i> on failure.<br>
  *	@return <i>0</i> on success.
  */
-extern int bk_vptr_append(bk_s B, struct bk_vptr *dp, struct bk_vptr *sp)
+extern int bk_vptr_append(bk_s B, struct bk_vptr *dp, const struct bk_vptr *sp)
 {
   BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
   void *tmp;
